# adventurous

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  publish.sh
crates/adventurous/: Cargo.toml
crates/adventurous/src/: lib.rs  test.rs
crates/adventurous_macros/: Cargo.toml  README.md
crates/adventurous_macros/src/: lib.rs  part.rs  test_solutions.rs
src/: geometry.rs  input.rs  lib.rs  runner.rs  solve.rs  strings.rs  test.rs
