[package]
name = "adventurous"
version = "0.0.3"
description = "A utility library for solving Advent of Code puzzles."
repository = "https://github.com/maxdeviant/adventurous"
documentation = "https://docs.rs/adventurous"
keywords = ["advent", "code", "aoc"]
authors = ["Marshall Bowers <elliott.codes@gmail.com>"]
license = "MIT"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0"
