[package]
name = "adventurous"
version = "0.1.0"
description = "A companion crate for solving Advent of Code puzzles."
repository = "https://github.com/maxdeviant/adventurous"
documentation = "https://docs.rs/adventurous"
keywords = ["advent", "code", "aoc"]
authors = ["Marshall Bowers <elliott.codes@gmail.com>"]
license = "MIT"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0"
pretty_assertions = "1.4.0"
